--- a/paginasPerfis/css/css1/adm/modal.css
+++ b/paginasPerfis/css/css1/adm/modal.css
@@ -1,7 +1,7 @@
 .modal{
     position: fixed;
-    top:0;
-    left:0;
+    top:70px;
+    left:0px;
     width: 100%;
     height: 100%;
     background: #00000090;
@@ -60,9 +60,9 @@
     padding: 0 20px;
 }
 
-#form input{
+/* #form input{
     text-transform: uppercase;
-}
+} */
 ::-webkit-input-placeholder { /* WebKit browsers */
     text-transform: none;
 }
